PR libstdc++/81221 fix namespace qualification for parallel mode

PR libstdc++/81221
	* include/bits/stl_algo.h (sample): Qualify with _GLIBCXX_STD_A not
	std.
	* testsuite/25_algorithms/sample/81221.cc: New.

From-SVN: r249698